# Server

./: .gitignore  README.md  pyproject.toml
Server/: start.sh
Server/app/: main.py
Server/app/api/: __init__.py
Server/app/api/endpoints/: allergy.py  appointment.py  basic_health.py  bill.py  doctor_note.py  emergency_contact.py  notify_runner.py  prescription.py  user.py  vaccination.py
Server/app/core/: config.py
Server/app/crud/: __init__.py  allergy.py  appointment.py  basic_health.py  bill.py  doctor_note.py  emergency_contact.py  notify_runner.py  prescription.py  user.py  vaccination.py
Server/app/db/: __init__.py  db.py
Server/app/models/: __init__.py  allergy.py  appointment.py  basic_health.py  bill.py  bills.py  doctor_note.py  emergency_contact.py  notify_runner.py  prescription.py  user.py  vaccination.py
Server/app/schemas/: __init__.py  allergy.py  appointment.py  basic_health.py  bill.py  doctor_note.py  emergency_contact.py  notify_runner.py  prescription.py  user.py  vaccination.py
