[tool.poetry]
name = "server"
version = "0.1.0"
description = "API Server For Unified Health Interface"
authors = ["Harikeshav R <r.harikeshav@gmail.com>"]
license = "GNU General Public License v3.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = {extras = ["all"], version = "^0.89.1"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.pyright]
venvPath='/Users/hari/.virtualenvs'
venv='server-bmqzoig5-py3.10'
